# cpp_tasks

./: README.md  hw1.cpp
hw1/: a.out
hw10/: main.cpp
hw11/: main1.cpp  main2.cpp
hw12/: main.cpp
hw13/: main.cpp
hw14/: main1.cpp  main2.cpp
hw15/: main.cpp
hw2/: a.out  hw2.cpp
hw3/: a.out  hw3.cpp
hw4/: hw4.cpp
hw5/: run.txt
hw5/src/: a.out  hw4.cpp  task.h
hw5/tests/: CMakeLists.txt  example_test.cpp
hw6/: a.out  main.cpp
hw7/: main7_1.cpp  main7_2.cpp
hw8/: main.cpp
hw9/: main9_1.cpp  main9_2.cpp
task2/: CMakeLists.txt  Universe.cpp  Universe.h  ex.txt  main.cpp  test.cpp  test_input.csv
task2/examples/: blinker.txt  pentamino.txt  pulsar.txt
task2/with_google_tests/: README.md  Universe.cpp  load_from_file.txt  save_to_file.txt  test.cpp  universe_after.txt  universe_before.txt
task2/without_google_tests/: README.md  Universe.h  a.out  block.txt  lightweight_spaceship.txt  main.cpp
task4/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  README.md  main.cpp  test.cpp  test.csv
task_0a/: main.cpp  main.out  module1.cpp  module1.h  module2.cpp  module2.h  module3.cpp  module3.h  myscript.sh
task_0b/: input.txt  output.csv  task_test.cpp  word_count
task_1b/: run.txt
task_1b/src/: task1b.h
task_1b/tests/: CMakeLists.txt  example_test.cpp
